# lightcycle

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  LICENSE-MIT  README.md  SCAFFOLD.md  deny.toml  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: README.md
crates/lightcycle-cli/: Cargo.toml
crates/lightcycle-cli/src/: health.rs  main.rs
crates/lightcycle-codec/: Cargo.toml
crates/lightcycle-codec/benches/: decode.rs  sigverify.rs
crates/lightcycle-codec/src/: abi.rs  block.rs  error.rs  events.rs  lib.rs  sigverify.rs  transaction.rs  tx_info.rs
crates/lightcycle-codec/tests/: mainnet_block.rs
crates/lightcycle-firehose/: Cargo.toml
crates/lightcycle-firehose/src/: archiver.rs  encode.rs  hub.rs  lib.rs  oracle.rs  server.rs
crates/lightcycle-firehose/tests/: grpc_round_trip.rs
crates/lightcycle-proto/: Cargo.toml  build.rs
crates/lightcycle-proto/src/: lib.rs
crates/lightcycle-proto/tests/: smoke.rs
crates/lightcycle-relayer/: Cargo.toml
crates/lightcycle-relayer/src/: cursor.rs  engine.rs  lib.rs  service.rs
crates/lightcycle-source/: Cargo.toml
crates/lightcycle-source/src/: grpc.rs  lib.rs  p2p.rs  rpc.rs
crates/lightcycle-store/: Cargo.toml
crates/lightcycle-store/src/: archive.rs  cache.rs  consistency.rs  cursor_store.rs  lib.rs
crates/lightcycle-types/: Cargo.toml
crates/lightcycle-types/src/: lib.rs
docker/: docker-compose.yml  lightcycle.Dockerfile  prometheus-alerts.yml  prometheus.yml
proto/: README.md
proto/firehose/: firehose.proto
proto/sf/tron/type/v1/: block.proto
scripts/: sync-protos.sh
