[package]
name = "lightcycle-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Block decode, signature verification, and event decoding for lightcycle"

[dependencies]
lightcycle-types.workspace = true
lightcycle-proto.workspace = true

prost.workspace = true
k256.workspace = true
sha2.workspace = true
sha3.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
prost-types.workspace = true

# B3 microbench (per BENCHMARKS.md): isolate the protobuf-decode hot
# path from I/O so we can read it as raw ns/block + ns/transaction on
# a single core. `harness = false` because criterion provides its own
# main(), not Rust's default test harness.
[[bench]]
name = "decode"
harness = false

# B2 hypothesis (per BENCHMARKS.md): "≥5K blk/s sustained WITH sigverify
# on." Decode-only is the lower bound; this bench adds the cryptographic
# cost — ECDSA recovery + keccak256 address derivation — against a real
# mainnet block fixture. Three sub-benches isolate recover-only,
# decode+recover, and full verify-with-SR-set so the marginal cost of
# each layer is visible.
[[bench]]
name = "sigverify"
harness = false

[lints]
workspace = true
