[package]
name = "lightcycle-relayer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "lightcycle orchestrator: reorg engine, finality tagging, cursor management"

[dependencies]
lightcycle-types.workspace = true
lightcycle-codec.workspace = true
lightcycle-source.workspace = true
lightcycle-store.workspace = true

tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
metrics.workspace = true
hex.workspace = true

[lints]
workspace = true
