[package]
name = "lightcycle-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Block cache and cursor store for lightcycle"

[dependencies]
lightcycle-types.workspace = true

redb.workspace = true
serde = { workspace = true }
bincode.workspace = true
metrics.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
